@@ -1,5 +1,11 @@
 2014-02-22  Kaz Kylheku  <kaz@kylheku.com>
 
+	* lib.c (obj_init): changing the quote, qquote, unquote
+	and splice symbols to be in the regular user package,
+	rather than the system package.
+
+2014-02-22  Kaz Kylheku  <kaz@kylheku.com>
+
 	* parser.y: Allow the (. expr) syntax to denote expr.
 
 	* eval.h: Declare existing lambda_s extern variable.
